# ghc-magic-dict-compat

./: .gitignore  CHANGELOG.md  README.md  cabal.project.freeze  ghc-magic-dict-compat.cabal
.github/workflows/: haskell.yml  release.yml
ci/configs/: ghc-9.0.2.config  ghc-9.2.8.config  ghc-9.6.3.config  ghc-9.8.1.config
ci/scripts/: enumerate-ci.js
src/GHC/Magic/Dict/: Compat.hs  Plugin.hs
src/GHC/Magic/Dict/Plugin/: Old.hs
src/GHC/TypeError/: Compat.hs
test/GHC/Magic/Dict/: CompatSpec.hs  Defs.hs  Errors.hs  Goods.hs
