cabal-version:      1.12
name:               ghc-magic-dict-compat
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/konn/ghc-magic-dict-compat#readme>

homepage:           https://github.com/konn/ghc-magic-dict-compat#readme
bug-reports:        https://github.com/konn/ghc-magic-dict-compat/issues
author:             Hiromi ISHII
maintainer:         konn.jinro_at_gmail.com
copyright:          2023 (c) Hiromi ISHII
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/konn/ghc-magic-dict-compat

library
  exposed-modules:
    GHC.Magic.Dict.Compat
    GHC.Magic.Dict.Plugin

  if impl(ghc <9.4)
    other-modules: GHC.Magic.Dict.Plugin.Old

  other-modules:    Paths_ghc_magic_dict_compat
  hs-source-dirs:   src
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

  build-depends:
      base                 >=4.7 && <5
    , dlist
    , ghc
    , ghc-prim
    , ghc-tcplugins-extra

  default-language: Haskell2010

test-suite ghc-magic-dict-compat-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Paths_ghc_magic_dict_compat
  hs-source-dirs:     test
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

  build-tool-depends: tasty-discover:tasty-discover -any
  build-depends:
      base                   >=4.7 && <5
    , ghc-magic-dict-compat
    , tasty
    , tasty-discover

  default-language:   Haskell2010
